@startuml
skinparam classAttributeIconSize 0

class GraphicEditor{
    +drawCircle():void
    +drawRectangle():void
    +drawShape():void
}


class Circle
class Shape
class Rectangle

GraphicEditor -> Circle
GraphicEditor -> Shape
GraphicEditor -> Rectangle
Shape <|--Circle
Rectangle --|> Shape
@enduml